--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,10 @@
   <meta name="mobile-web-app-capable" content="yes">
   <title>Threejs Audio Visualizer</title>
   <link href="https://fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="css/app.css">
-</head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/98/three.min.js"></script>
+  <script src="https://Threejs.org/examples/js/controls/OrbitControls.js"></script>
+<link href="app.539bdb78442d7873d6a6.css" rel="stylesheet"></head>
 
 <body>
   <button class="play-intro">
@@ -82,9 +84,7 @@
   </div>
   <div class="loader"></div>
   <audio id="audio" crossOrigin="anonymous"></audio>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.min.js"></script>
-  <script src="https://Threejs.org/examples/js/controls/OrbitControls.js"></script>
-  <script src="js/app.js"></script>
-</body>
+
+<script type="text/javascript" src="app.539bdb78442d7873d6a6.js"></script></body>
 
 </html>
